Mit Either Klasse verbessert